# agentive-ai-job-applier

./: .gitignore  Robbins_resume.docx  Signature.jpg:Zone.Identifier  agents.py  app.py  cover-letter-text-example.txt  create-cover-letter.py  crew.py  job_listing.txt  main.py  pyproject.toml  tasks.py  workflow.py
Previous_crewai_framework/: contact-info-example.txt  crew.py  main.py
config/: agents.yaml  tasks.yaml
input_ouput/: write_to_word.py
models/: google_model.py  openai_model.py
prompts/: body.py  conclusion.py  hook.py  job_listing.py  resume.py  review.py  truth.py
secure/: resume.docx
secure/finished/: {'Full role': '"Data Analyst 3",', 'Company name': '"Nextant",'}.docx
utils/: extract_contact.py  jobs.py  read_resume.py
